# seed_fastapi

./: cookiecutter.json  readme.md
{{ cookiecutter.name }}/: .env_sample  Dockerfile  app.py  manage.py  pyproject.toml
{{ cookiecutter.name }}/settings/: __init__.py  cors.py
{{ cookiecutter.name }}/tests/: test_routes.py
